more content in lec 18

--- a/09_Ch_10_SVD_Apps/111-Apps.ipynb
+++ b/09_Ch_10_SVD_Apps/111-Apps.ipynb
@@ -147,7 +147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The Singular Values of an m×n Matrix\n",
+    "## The Singular Values of an $m \\times n$ Matrix\n",
     "\n",
     "Consider an $m \\times n$ real matrix $A \\in \\mathbb{R}^{m \\times n}$. Then $A^TA$ is an $n \\times n$ symmetric matrix, and can be orthogonally diagonalized. Let $V = \\bm \\vv v_1 & \\cdots & \\vv v_n\\em$ be an orthogonal matrix composed of orthonormal eigenvectors of $A^TA$, and let $\\lambda_1, \\ldots, \\lambda_n$ be the associated eigenvalues of $A^TA$. Then for $i = 1, \\ldots, n$,\n",
     "\n",
@@ -232,82 +232,83 @@
     ":::\n",
     "\n",
     "::::\n",
-    "\n"
+    "\n",
+    ":::{note}Numerical Note\n",
+    "In certain cases, the rank of $A$ may be very sensitive to small changes in the entries of $A$. The obvious approach of counting the \\# of pivot columns in $A$ does not work well if $A$ is row reduced by a computer, as roundoff errors often create a row echelon form with full rank. In practice, the most reliable way of computing the rank of a large matrix $A$ is to count the number of singular values larger than a small threshold $\\epsilon$ (typically on the order of $10^{-12}$, but can vary depending on applications). In this case, singular values smaller than $\\epsilon$ are treated as zeros for all practical purposes, and the _effective rank of $A$_ is computed by counting the remaining nonzero singular values.\n",
+    ":::"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\textbf{Numerical Note:} In certain cases, the rank of $A$ may be very sensitive to small changes in the entries of $A$. The classic approach of counting the \\# of pivot columns in $A$ does not work well if $A$ is row reduced by a computer, as roundoff errors often create a row echelon form with full rank. In practice, the most reliable way of computing the rank of a large matrix $A$ is to count the number of singular values larger than a small threshold $\\epsilon$ (typically on the order of $10^{-12}$ for very accurate computations). In this case, singular values smaller than $\\epsilon$ are treated as zeros for all practical purposes, and the effective rank of $A$ is computed by counting the remaining nonzero singular values.\n",
-    "\n",
-    "\\section*{The Singular Value Decomposition}\n",
+    "## The Singular Value Decomposition\n",
     "\n",
     "The decomposition of $A$ involves an $r \\times r$ diagonal matrix $\\Sigma$ of the form\n",
     "\n",
-    "\\[\n",
+    "$$\n",
     "\\Sigma = \\text{diag}(\\sigma_1, \\ldots, \\sigma_r).\n",
-    "\\]\n",
+    "$$\n",
     "\n",
-    "We note that because $r = \\text{dim Col}(A) = \\text{dim Range}(A)$ by the FTLA, we must have that $r \\leq \\min\\{m,n\\}$ if $A \\in \\mathbb{R}^{m \\times n}$.\n",
+    "We note that because $r = \\text{dim Col}(A) = \\text{dim Row}(A)$ by the Fundamental Theorem of Linear Algebra, we must have that $r \\leq \\min\\{m,n\\}$ if $A \\in \\mathbb{R}^{m \\times n}$.\n",
     "\n",
-    "\\begin{theorem}\n",
+    ":::{prf:theorem}\n",
+    ":label: svd_thm\n",
     "Let $A \\in \\mathbb{R}^{m \\times n}$ be an $m \\times n$ matrix of rank $r > 0$. Then $A$ can be factored as\n",
-    "\\[\n",
+    "$$\n",
     "A = U \\Sigma V^T,\n",
-    "\\]\n",
+    "$$\n",
     "where $U \\in \\mathbb{R}^{m \\times r}$ has orthonormal columns, so $U^TU = I_r$, $\\Sigma = \\text{diag}(\\sigma_1, \\ldots, \\sigma_r)$ is a diagonal matrix with the singular values of $A$ $\\sigma_i$ along the diagonal, and $V \\in \\mathbb{R}^{n \\times r}$ has orthonormal columns, so $V^TV = I_r$.\n",
-    "\\end{theorem}\n",
+    ":::\n",
     "\n",
-    "Such a factorization of $A$ is called its singular value decomposition, and the columns of $U$ are called the left singular vectors of $A$, while the columns of $V$ are called the right singular vectors of $A$.\n",
+    "Such a factorization of $A$ is called its _singular value decomposition_, and the columns of $U$ are called the _left singular vectors_ of $A$, while the columns of $V$ are called the _right singular vectors of $A$_.\n",
     "\n",
-    "\\begin{proof}\n",
-    "Let $\\lambda_i$ and $v_i$ be the eigenvalues/vectors of $A^TA$ as described previously, so that $Av_1, \\ldots, Av_r$ is an orthogonal basis for col$(A)$. Normalize each $Av_i$ to form an orthonormal basis for col$(A)$:\n",
+    ":::{prf:proof} Proof of [](#svd_thm)\n",
+    ":label: proof-svd_thm\n",
+    ":class: dropdown\n",
+    "Let $\\lambda_i$ and $\\vv v_i$ be the eigenvalues/vectors of $A^TA$ as described previously, so that $A\\vv v_1, \\ldots, A\\vv v_r$ is an orthogonal basis for col$(A)$. Normalize each $A\\vv v_i$ to form an orthonormal basis for col$(A)$:\n",
     "\n",
-    "\\[\n",
-    "u_i := \\frac{1}{\\|Av_i\\|} Av_i = \\frac{1}{\\sigma_i} Av_i\n",
-    "\\]\n",
+    "$$\n",
+    "\\vv u_i := \\frac{1}{\\|A\\vv v_i\\|} A\\vv v_i = \\frac{1}{\\sigma_i} A\\vv v_i\n",
+    "$$\n",
     "\n",
-    "and hence $Av_i = \\sigma_i u_i$ for $i=1,\\ldots,r$. Define the matrices\n",
+    "and hence $A\\vv v_i = \\sigma_i \\vv u_i$ for $i=1,\\ldots,r$. Define the matrices\n",
     "\n",
-    "\\[\n",
-    "U = [u_1 \\cdots u_r] \\in \\mathbb{R}^{m \\times r} \\quad \\text{and} \\quad V = [v_1 \\cdots v_r] \\in \\mathbb{R}^{n \\times r}\n",
-    "\\]\n",
+    "$$\n",
+    "U = \\bm \\vv u_1 & \\cdots  & \\vv u_r\\em  \\in \\mathbb{R}^{m \\times r} \\quad \\text{and} \\quad V = \\bm \\vv v_1 & \\cdots & \\vv v_r\\em \\in \\mathbb{R}^{n \\times r}\n",
+    "$$\n",
     "\n",
     "By construction, the columns of $U$ are orthonormal: $U^TU = I_r$, and similarly for the columns of $V$: $V^TV = I_r$.\n",
     "\n",
-    "\\end{proof}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Let's define the following \"full\" matrices:\n",
     "\n",
-    "\\[\n",
-    "\\hat{U} = [U \\; U^\\perp] \\in \\mathbb{R}^{m \\times m} \\quad \\text{and} \\quad \\hat{V} = [V \\; V^\\perp] \\in \\mathbb{R}^{n \\times n}\n",
-    "\\]\n",
+    "$$\n",
+    "\\hat{U} = \\bm U &  U^\\perp \\em \\in \\mathbb{R}^{m \\times m} \\quad \\text{and} \\quad \\hat{V} = \\bm V & V^\\perp\\em \\in \\mathbb{R}^{n \\times n}\n",
+    "$$\n",
     "\n",
-    "Here, $V^\\perp = [v_{r+1} \\cdots v_n]$ has orthonormal columns spanning the orthogonal complement of span$\\{v_1, \\ldots, v_r\\}$, so that the columns of $\\hat{V}$ form an orthonormal basis of $\\mathbb{R}^n$.\n",
+    "Here, $V^\\perp = \\bm \\vv v_{r+1} & \\cdots & \\vv  v_n\\em$ has orthonormal columns spanning the orthogonal complement of span$\\{\\vv v_1, \\ldots, \\vv v_r\\}$, so that the columns of $\\hat{V}$ form an orthonormal basis of $\\mathbb{R}^n$.\n",
     "\n",
-    "Similarly, let $U^\\perp$ have orthonormal columns spanning the orthogonal complement of span$\\{u_1, \\ldots, u_r\\}$, so the columns of $\\hat{U}$ form an orthonormal basis for $\\mathbb{R}^m$.\n",
+    "Similarly, let $U^\\perp$ have orthonormal columns spanning the orthogonal complement of span$\\{\\vv u_1, \\ldots, \\vv u_r\\}$, so the columns of $\\hat{U}$ form an orthonormal basis for $\\mathbb{R}^m$.\n",
     "\n",
-    "Finally, define $\\hat{\\Sigma} = \\begin{bmatrix} \\Sigma & 0 \\\\ 0 & 0 \\end{bmatrix}_{m \\times n}$. We first show that\n",
+    "Finally, define \n",
+    "$$\n",
+    "\\hat{\\Sigma} &= \\begin{bmatrix}  \\overbrace{\\Sigma}^d & \\quad \\overbrace{0}^{n-r}\\} r \\\\ 0 & \\quad \\quad \\quad 0 \\} m-r \\end{bmatrix}\n",
+    "$$. \n",
+    "We first show that\n",
     "\n",
-    "\\[\n",
+    "$$\n",
     "A = \\hat{U} \\hat{\\Sigma} \\hat{V}^T, \\quad \\text{or equivalently (since $\\hat{V}$ is orthogonal),} \\quad A\\hat{V} = \\hat{U}\\hat{\\Sigma}.\n",
-    "\\]\n",
+    "$$\n",
     "\n",
     "First,\n",
-    "\\[\n",
-    "A\\hat{V} = [Av_1 \\cdots Av_r \\; Av_{r+1} \\cdots Av_n] = [\\sigma_1u_1 \\cdots \\sigma_ru_r \\; 0 \\cdots 0].\n",
-    "\\]\n",
+    "$$\n",
+    "A\\hat{V} = \\bm A\\vv v_1 & \\cdots & A\\vv v_r & A\\vv v_{r+1} & \\cdots & A\\vv v_n\\em = \\bm \\sigma_1 \\vv u_1 & \\cdots & \\sigma_r\\vv u_r & \\vv 0 & \\cdots & \\vv 0\\em.\n",
+    "$$\n",
     "\n",
     "Then, notice:\n",
     "\n",
-    "\\[\n",
-    "\\hat{U} \\hat{\\Sigma} = [u_1 \\cdots u_r \\; u_{r+1} \\cdots u_m] \n",
+    "$$\n",
+    "\\hat{U} \\hat{\\Sigma} = \\bm \\vv u_1 \\cdots \\vv u_r & \\vv u_{r+1} & \\cdots & \\vv u_m\\em \n",
     "\\begin{bmatrix}\n",
     "\\sigma_1 & & 0 & 0 \\cdots 0 \\\\\n",
     "& \\ddots & & \\vdots \\\\\n",
@@ -316,14 +317,28 @@
     "\\vdots & & \\vdots & \\vdots \\\\\n",
     "0 & \\cdots & 0 & 0 \\cdots 0\n",
     "\\end{bmatrix}\n",
-    "= [\\sigma_1u_1 \\cdots \\sigma_ru_r \\; 0 \\cdots 0]\n",
-    "\\]\n",
+    "= \\bm \\sigma_1 \\vv u_1 & \\cdots & \\sigma_r \\vv u_r & \\vv 0 \\cdots \\vv 0\\em.\n",
+    "$$\n",
     "\n",
     "So that $A\\hat{V} = \\hat{U}\\hat{\\Sigma}$, or equivalently, $A = \\hat{U}\\hat{\\Sigma}\\hat{V}^T$. But, now, notice:\n",
     "\n",
-    "\\[\n",
-    "A = \\hat{U} \\hat{\\Sigma} \\hat{V}^T = [U \\; U^\\perp] \\begin{bmatrix} \\Sigma & 0 \\\\ 0 & 0 \\end{bmatrix} \\begin{bmatrix} V^T \\\\ (V^\\perp)^T \\end{bmatrix} = U \\Sigma V^T, \\quad \\text{proving our result.}\n",
-    "\\]\n",
+    "$$\n",
+    "A = \\hat{U} \\hat{\\Sigma} \\hat{V}^T = \\bm U & U^\\perp\\em  \\begin{bmatrix} \\Sigma & 0 \\\\ 0 & 0 \\end{bmatrix} \\begin{bmatrix} V^T \\\\ (V^\\perp)^T \\end{bmatrix} = U \\Sigma V^T,\n",
+    "$$\n",
+    "proving our result.\n",
+    ":::\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "\n",
     "\\textbf{NOTE:} Some textbooks define the singular value decomposition of $A$ as $A = \\hat{U} \\hat{\\Sigma} \\hat{V}^T$. This is necessary when allowing for singular values equal to zero. When only considering nonzero singular values, as we do, $A = U\\Sigma V^T$ is the appropriate definition. This is sometimes called the compact SVD of $A$, but we will just call it the SVD.\n",
     "\n",
