almost done with lec 18

--- a/09_Ch_10_SVD_Apps/111-SVD.ipynb
+++ b/09_Ch_10_SVD_Apps/111-SVD.ipynb
@@ -5,10 +5,10 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: 10.1 Applications\n",
+    "title: 10.1 SVD Theory\n",
     "subject:  SVD\n",
     "subtitle: \n",
-    "short_title: 10.1 Applications\n",
+    "short_title: 10.1 SVD Theory\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/09_Ch_10_SVD_Apps/111-Apps.ipynb)\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/09_Ch_10_SVD_Apps/111-SVD.ipynb)\n",
     "\n",
     "{doc}`Lecture notes <../lecture_notes/Lecture 18 - Singular Values and the Singular Value Decomposition.pdf>`"
    ]
@@ -263,7 +263,7 @@
     "\n",
     "Such a factorization of $A$ is called its _singular value decomposition_, and the columns of $U$ are called the _left singular vectors_ of $A$, while the columns of $V$ are called the _right singular vectors of $A$_.\n",
     "\n",
-    ":::{prf:proof} Proof of [](#svd_thm)\n",
+    "::::{prf:proof} Proof of [](#svd_thm)\n",
     ":label: proof-svd_thm\n",
     ":class: dropdown\n",
     "Let $\\lambda_i$ and $\\vv v_i$ be the eigenvalues/vectors of $A^TA$ as described previously, so that $A\\vv v_1, \\ldots, A\\vv v_r$ is an orthogonal basis for col$(A)$. Normalize each $A\\vv v_i$ to form an orthonormal basis for col$(A)$:\n",
@@ -326,247 +326,110 @@
     "A = \\hat{U} \\hat{\\Sigma} \\hat{V}^T = \\bm U & U^\\perp\\em  \\begin{bmatrix} \\Sigma & 0 \\\\ 0 & 0 \\end{bmatrix} \\begin{bmatrix} V^T \\\\ (V^\\perp)^T \\end{bmatrix} = U \\Sigma V^T,\n",
     "$$\n",
     "proving our result.\n",
-    ":::\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "\n",
+    ":::{note} \n",
+    "Some textbooks define the singular value decomposition of $A$ as $A = \\hat{U} \\hat{\\Sigma} \\hat{V}^T$ --- this is necessary when allowing for singular values equal to zero. When only considering nonzero singular values, as we do, $A = U\\Sigma V^T$ is the appropriate definition. This is sometimes called the _compact SVD of $A$_, but we will just call it the SVD.\n",
+    ":::\n",
     "\n",
-    "\\textbf{NOTE:} Some textbooks define the singular value decomposition of $A$ as $A = \\hat{U} \\hat{\\Sigma} \\hat{V}^T$. This is necessary when allowing for singular values equal to zero. When only considering nonzero singular values, as we do, $A = U\\Sigma V^T$ is the appropriate definition. This is sometimes called the compact SVD of $A$, but we will just call it the SVD.\n",
-    "\n",
-    "\\textbf{Example:} Let's use the results of the previous example to construct the SVD of\n",
-    "\\[\n",
-    "A = \\begin{bmatrix} 4 & 8 & 14 \\\\ 8 & 7 & -2 \\end{bmatrix}.\n",
-    "\\]"
+    "::::\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\textbf{Step 1:} Find an orthogonal diagonalization of $A^TA$. In general, for $A$ with many columns, this is done numerically, but we use the data from before:\n",
+    ":::{prf:example} \n",
+    ":label: svd_thm_eg\n",
+    "Let's use the results of the previous example to construct the SVD of\n",
+    "$A = \\begin{bmatrix} 4 & 11 & 14 \\\\ 8 & 7 & -2 \\end{bmatrix}$.\n",
     "\n",
-    "$A^TA = V \\Lambda V^T = [v_1\\ v_2\\ v_3] \\begin{bmatrix}\n",
+    "**Step 1: Find an orthogonal diagonalization of $A^TA$**. In general, for $A$ with many columns, this is done numerically, but we use the data from before:\n",
+    "\n",
+    "$$\n",
+    "A^TA = \\hat{V} \\Lambda \\hat{V}^T = \\bm \\vv v_1 & \\vv v_2 & \\vv v_3 \\em \\begin{bmatrix}\n",
     "\\lambda_1 & & \\\\\n",
     "& \\lambda_2 & \\\\\n",
     "& & \\lambda_3\n",
     "\\end{bmatrix} \\begin{bmatrix}\n",
-    "v_1^T \\\\\n",
-    "v_2^T \\\\\n",
-    "v_3^T\n",
-    "\\end{bmatrix}$\n",
+    "\\vv v_1^T \\\\\n",
+    "\\vv v_2^T \\\\\n",
+    "\\vv v_3^T\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
     "\n",
-    "with $(\\lambda_i, v_i)$ as spectral eigenpairs with $\\lambda_1 = 360$, $\\lambda_2 = 90$, $\\lambda_3 = 0$.\n",
+    "with $(\\lambda_i, \\vv v_i)$ as spectral above with $\\lambda_1 = 360$, $\\lambda_2 = 90$, $\\lambda_3 = 0$.\n",
     "\n",
-    "\\textbf{Step 2:} Setup $V$ and $\\Sigma$. Arrange the nonzero eigenvalues of $A^TA$ in decreasing order and compute the singular values. For this example:\n",
+    "**Step 2: Setup $V$ and $\\Sigma$**: Arrange the nonzero eigenvalues of $A^TA$ in decreasing order and compute the singular values. For this example:\n",
     "\n",
-    "$\\sigma_1 = \\sqrt{360}$ and $\\sigma_2 = 3\\sqrt{10}$,\n",
+    "$$\n",
+    "\\sigma_1 = 6\\sqrt{10} \\ \\text{and} \\ \\sigma_2 = 3\\sqrt{10}\n",
+    "$$\n",
     "\n",
     "and\n",
     "\n",
-    "$\\Sigma = diag(\\sigma_1, \\sigma_2) = \\begin{bmatrix}\n",
+    "$$\n",
+    "\\Sigma = \\text{diag}(\\sigma_1, \\sigma_2) = \\begin{bmatrix}\n",
     "6\\sqrt{10} & 0 \\\\\n",
     "0 & 3\\sqrt{10}\n",
-    "\\end{bmatrix}$. Hence $rank A = 2$, and $V \\in \\mathbb{R}^{3\\times2}$\n",
+    "\\end{bmatrix}.\n",
+    "$$\n",
+    "Hence rank$ A = 2$, and $V \\in \\mathbb{R}^{3\\times2}$.\n",
     "\n",
     "The corresponding eigenvectors define the columns of $V$:\n",
     "\n",
-    "$V = [v_1\\ v_2] = \\begin{bmatrix}\n",
-    "\\frac{\\sqrt{3}}{3} & -\\frac{1}{3} \\\\\n",
+    "$$\n",
+    "V = \\bm \\vv v_1 & \\vv v_2\\em = \\begin{bmatrix}\n",
+    "\\frac{1}{3} & -\\frac{2}{3} \\\\\n",
     "\\frac{2}{3} & -\\frac{1}{3} \\\\\n",
     "\\frac{2}{3} & \\frac{2}{3}\n",
-    "\\end{bmatrix}$\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
     "\n",
-    "\\textbf{Step 3:} Construct $U$. Since $rank A = 2$, $U \\in \\mathbb{R}^{2\\times2}$. The columns of $U$ are given by $Av_1$ and $Av_2$. Recall that we should ensure that $\\|Av_1\\| = \\sigma_1$ and $\\|Av_2\\| = \\sigma_2$. So $U = [u_1\\ u_2]$ with\n",
+    "**Step 3 Construct $U$**: Since rank$ A = 2$, $U \\in \\mathbb{R}^{2\\times2}$. The columns of $U$ are given by $A \\vv v_1$ and $A\\vv v_2$. Recall we showed above that $\\|A \\vv v_1\\| = \\sigma_1$ and $\\|A \\vv v_2\\| = \\sigma_2$. So $U = \\bm \\vv u_1 & \\vv u_2\\em$ with\n",
     "\n",
-    "$u_1 = \\frac{Av_1}{\\sigma_1} = \\frac{1}{6\\sqrt{10}} \\begin{bmatrix}\n",
+    "$$\n",
+    "\\vv u_1 = \\frac{A\\vv v_1}{\\sigma_1} = \\frac{1}{6\\sqrt{10}} \\begin{bmatrix}\n",
     "18 \\\\\n",
     "6\n",
     "\\end{bmatrix} = \\begin{bmatrix}\n",
-    "3/\\sqrt{10} \\\\\n",
-    "1/\\sqrt{10}\n",
-    "\\end{bmatrix}$ and\n",
-    "\n",
-    "$u_2 = \\frac{Av_2}{\\sigma_2} = \\frac{1}{3\\sqrt{10}} \\begin{bmatrix}\n",
+    "\\frac{3}{\\sqrt{10}} \\\\\n",
+    "\\frac{1}{\\sqrt{10}}\n",
+    "\\end{bmatrix} \\ \\text{and} \\\\\n",
+    "\\vv u_2 = \\frac{A\\vv v_2}{\\sigma_2} = \\frac{1}{3\\sqrt{10}} \\begin{bmatrix}\n",
     "3 \\\\\n",
     "-9\n",
     "\\end{bmatrix} = \\begin{bmatrix}\n",
-    "1/\\sqrt{10} \\\\\n",
-    "-3/\\sqrt{10}\n",
-    "\\end{bmatrix}$\n",
+    "\\frac{1}{\\sqrt{10}} \\\\\n",
+    "-\\frac{3}{\\sqrt{10}}\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
     "\n",
     "Finally, the SVD of $A$ is:\n",
     "\n",
-    "$A = \\begin{bmatrix}\n",
-    "3/\\sqrt{10} & 1/\\sqrt{10} \\\\\n",
-    "1/\\sqrt{10} & -3/\\sqrt{10}\n",
-    "\\end{bmatrix} \\begin{bmatrix}\n",
+    "$$\n",
+    "A = \\underbrace{\\begin{bmatrix}\n",
+    "\\frac{3}{\\sqrt{10}} & \\frac{1}{\\sqrt{10}} \\\\\n",
+    "\\frac{1}{\\sqrt{10}} & -\\frac{3}{\\sqrt{10}}\n",
+    "\\end{bmatrix}}_U \\underbrace{\\begin{bmatrix}\n",
     "6\\sqrt{10} & 0 \\\\\n",
     "0 & 3\\sqrt{10}\n",
-    "\\end{bmatrix} \\begin{bmatrix}\n",
-    "\\frac{\\sqrt{3}}{3} & \\frac{2}{3} & \\frac{2}{3} \\\\\n",
-    "-\\frac{1}{3} & -\\frac{1}{3} & \\frac{2}{3}\n",
-    "\\end{bmatrix}$\n",
-    "\n",
-    "$\\underbrace{}_U \\underbrace{}_\\Sigma \\underbrace{}_{V^T}$\n",
+    "\\end{bmatrix}}_{\\Sigma} \\underbrace{\\begin{bmatrix}\n",
+    "\\frac{1}{3} & \\frac{2}{3} & \\frac{2}{3} \\\\\n",
+    "-\\frac{2}{3} & -\\frac{1}{3} & \\frac{2}{3}\n",
+    "\\end{bmatrix}}_{V^T}\n",
+    "$$\n",
     "\n",
     "You can check that indeed $A = U\\Sigma V^T$ here, and that $U^TU = V^TV = I_2$\n",
+    ":::\n",
     "\n",
-    "\\textbf{ONLINE NOTES:} Please add example 4 from LAA 7.1, subtly modified to use the compact SVD form."
+    "**TO DO**: Please add example 4 from LAA 7.1, subtly modified to use the compact SVD form."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\section{Linear Algebra Applications of the SVD}\n",
-    "\n",
-    "The next few classes will focus on engineering and AI applications of the SVD. For now, we highlight some more technical linear algebra applications: these are all immensely important from a practical perspective and form subprotines for most real-world applications of linear algebra.\n",
-    "\n",
-    "\\subsection{The Condition Number}\n",
-    "Most numerical calculations that require solving a linear equation $Ax=b$ are as reliable as possible when the SVD of $A$ is used. Since the matrices $U$ and $V$ have orthonormal columns, they do not affect lengths or angles between vectors. For example, for $U\\in\\mathbb{R}^{m\\times m}$, we have:\n",
-    "\n",
-    "\\[\\langle Ux, Uy \\rangle = x^T U^T U y = x^T y = \\langle x, y \\rangle\\]\n",
-    "\n",
-    "for any $x,y\\in\\mathbb{R}^m$. Therefore, any numerical issues that arise will be due to the diagonal entries of $\\Sigma$, i.e., due to the singular values of $A$.\n",
-    "\n",
-    "In particular, if some of singular values are much larger than others, this means certain directions are stretched out much more than others, which can lead to rounding errors. A common measure of such stretching is given by the singular values of $A$. If $A\\in\\mathbb{R}^{m\\times n}$ is an $m\\times n$ matrix so that $r=\\text{rank}(A)\\leq n$, we define the \\textbf{condition number of A} to be the ratio $\\kappa(A) = \\frac{\\sigma_1}{\\sigma_r}$ of the largest to smallest singular values of $A$. If $A$ is not invertible, it is conventional to set $\\kappa(A)=\\infty$, although the ratio $\\frac{\\sigma_1}{\\sigma_r}$ is a useful measure of the numerical stability of computing with a rectangular matrix $A\\in\\mathbb{R}^{m\\times n}$.\n",
-    "\n",
-    "\\textbf{ONLINE NOTES:} Using numpy, show that ill-conditioned $A$ can lead to bad solutions to $Ax=b$ even if $A$ is invertible. Case 1: assume we use $\\sigma_1 = b + n$ for $n$ some small measurement noise. Case 2: just make $A$ super ill-conditioned and show that $x=A^{-1}b$ computed using numpy doesn't actually satisfy $Ax=b$.\n",
-    "\n",
-    "\\subsection{Computing Bases of Fundamental Subspaces}\n",
-    "\n",
-    "Given an SVD for an $m\\times n$ matrix $A\\in\\mathbb{R}^{m\\times n}$ with $\\text{rank}(A)=r$, let $u_1,\\ldots,u_r$ be the left singular vectors, $v_1,\\ldots,v_r$ the right singular vectors, and $\\sigma_1,\\ldots,\\sigma_r$ the singular values.\n",
-    "\n",
-    "Recall that we showed that $u_1,\\ldots,u_r$ forms a basis for $\\text{Col}(A)$. Let $u_{r+1},\\ldots,u_m$ be an orthonormal basis for $\\text{Col}(A)^\\perp$ so that $u_1,\\ldots,u_m$ form a basis for $\\mathbb{R}^m$, computed for example using the Gram-Schmidt Process. Then, by the FTLA we have that $\\text{Col}(A)^\\perp = \\text{Null}(A^T) = \\text{span}\\{u_{r+1},\\ldots,u_m\\}$, i.e., these vectors form an orthonormal basis for $\\text{Null}(A^T)=\\text{Null}(A)^\\perp$.\n",
-    "\n",
-    "Next, recall that $v_1,\\ldots,v_r,v_{r+1},\\ldots,v_n$, the eigenvectors of $A^TA$, form an orthonormal"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "basis of $\\mathbb{R}^n$. Since $Av_i = 0$ for $i > r$, we have that $v_{r+1},\\ldots,v_n$ span a subspace of $\\text{Null}(A)$ of dimension $n-r$. But, by the FTLA, $\\dim\\text{Null}(A) = n - \\text{rank}(A) = n-r$.\n",
-    "\n",
-    "Therefore, $v_{r+1},\\ldots,v_n$ are an orthonormal basis for $\\text{Null}(A)$.\n",
-    "\n",
-    "Finally, $\\text{Null}(A)^\\perp = \\text{Col}(A^T) = \\text{Row}(A)$. But $\\text{Null}(A)^\\perp = \\text{span}\\{v_1,\\ldots,v_r\\}$ since the $v_i$ are an orthonormal basis for $\\mathbb{R}^n$, and thus $v_1,\\ldots,v_r$ are an orthonormal basis for $\\text{Row}(A)$.\n",
-    "\n",
-    "Summarizing, we have:\n",
-    "\n",
-    "\\begin{itemize}\n",
-    "\\item $\\text{Col}(A) = \\text{span}\\{u_1,\\ldots,u_r\\}$\n",
-    "\\item $\\text{Col}(A)^\\perp = \\text{Null}(A^T) = \\text{span}\\{u_{r+1},\\ldots,u_m\\}$\n",
-    "\\item $\\text{Col}(A^T) = \\text{Row}(A) = \\text{span}\\{v_1,\\ldots,v_r\\}$\n",
-    "\\item $\\text{Col}(A^T)^\\perp = \\text{Null}(A) = \\text{span}\\{v_{r+1},\\ldots,v_n\\}$\n",
-    "\\end{itemize}\n",
-    "\n",
-    "[Image of four fundamental subspaces and the action of A]\n",
-    "\n",
-    "Specializing these observations to square matrices, we have the following theorem summarizing invertible matrices:\n",
-    "\n",
-    "\\textbf{Theorem:} The following statements are equivalent for a square $n\\times n$ matrix $A\\in\\mathbb{R}^{n\\times n}$:\n",
-    "\\begin{enumerate}\n",
-    "\\item $\\text{Col}(A)^\\perp = \\text{Null}(A^T) = \\{0\\}$\n",
-    "\\item $\\text{Null}(A)^\\perp = \\text{Col}(A^T) = \\text{Row}(A) = \\mathbb{R}^n$\n",
-    "\\item $\\text{Col}(A^T)^\\perp = \\text{Null}(A) = \\{0\\}$\n",
-    "\\item $\\text{Null}(A^T)^\\perp = \\text{Col}(A) = \\mathbb{R}^n$\n",
-    "\\item $A$ has rank $=n$\n",
-    "\\item $A$ has $n$ (nonzero) singular values\n",
-    "\\end{enumerate}\n",
-    "\n",
-    "\\subsection{The Pseudoinverse of A}\n",
-    "\n",
-    "Recall the least squares problem of finding a vector $\\hat{x}$ that minimizes the objective $\\|Ax-b\\|^2$. We saw that the least squares solution is given by the solution to the normal equations:\n",
-    "\n",
-    "$A^TA\\hat{x} = A^Tb$. (NE)\n",
-    "\n",
-    "Let's rewrite (NE) using the SVD $A = U\\Sigma V^T$, $A^T = V\\Sigma^T U^T = V\\Sigma U^T$ ($\\Sigma = \\Sigma^T$)\n",
-    "\n",
-    "$A^TA\\hat{x} = V\\Sigma U^T U\\Sigma V^T\\hat{x} = V\\Sigma^2 V^T\\hat{x} = V\\Sigma U^Tb$\n",
-    "$\\underbrace{}_{I}$ $\\underbrace{}_{=\\Sigma}$ $(a)$ $(b)$\n",
-    "\n",
-    "Let's start by left multiplying (a) and (b) by $V^T$ to take advantage of $V^TV = I$:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$V^T(V\\Sigma^2V^T\\hat{x}) = V^T(V\\Sigma U^Tb) \\Rightarrow \\Sigma^2V^T\\hat{x} = \\Sigma U^Tb$.\n",
-    "\n",
-    "Now, let's isolate $V^T\\hat{x}$ by multiplying both sides by $\\Sigma^{-2}$:\n",
-    "\n",
-    "$V^T\\hat{x} = \\Sigma^{-1}U^Tb$. $(*)$\n",
-    "\n",
-    "Finally, note that $\\hat{x}$ satisfies $(*)$ iff $\\hat{x} = V\\Sigma^{-1}U^Tb$ (again since $V^TV=I$)\n",
-    "$+ n$\n",
-    "for any $n \\in \\text{Null}(V^T) = \\text{Col}(V)^\\perp$. The special solution $\\hat{x}^* = V\\Sigma^{-1}U^Tb$\n",
-    "can be shown to be the minimum norm least squares solution when several $\\hat{x}$\n",
-    "exist such that $A\\hat{x} = b$. The matrix\n",
-    "\n",
-    "$A^+ = V\\Sigma^{-1}U^T$\n",
-    "\n",
-    "is called the \\textcolor{blue}{pseudoinverse of $A$}, and is also known as the \\textcolor{blue}{Moore-Penrose inverse of $A$}.\n",
-    "\n",
-    "If we look at $A\\hat{x}^* = AA^+b$, we observe that:\n",
-    "\n",
-    "$A\\hat{x}^* = U\\Sigma V^TV\\Sigma^{-1}U^Tb = UU^Tb$,\n",
-    "$\\underbrace{}_{I}$\n",
-    "\n",
-    "i.e., $A\\hat{x}^*$ is the orthogonal projection $\\hat{b}$ of $b$ onto $\\text{Col}(A)$.\n",
-    "\n",
-    "\\textbf{ONLINE NOTES:} Please add the Practice Problems on p.471 of LAA at the end of Ch. 7.4 + solutions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\\section*{PRACTICE PROBLEM}\n",
-    "\n",
-    "Let $\\mathbf{p}_1 = \\begin{bmatrix} 1 \\\\ 0 \\\\ 2 \\end{bmatrix}$, \n",
-    "$\\mathbf{p}_2 = \\begin{bmatrix} -1 \\\\ 2 \\\\ 1 \\end{bmatrix}$, \n",
-    "$\\mathbf{n}_1 = \\begin{bmatrix} 1 \\\\ 1 \\\\ -2 \\end{bmatrix}$, and \n",
-    "$\\mathbf{n}_2 = \\begin{bmatrix} -2 \\\\ 1 \\\\ 3 \\end{bmatrix}$; \n",
-    "let $H_1$ be the hyperplane (plane) in $\\mathbb{R}^3$ passing through the point $\\mathbf{p}_1$ and having normal vector $\\mathbf{n}_1$; and let $H_2$ be the hyperplane passing through the point $\\mathbf{p}_2$ and having normal vector $\\mathbf{n}_2$. Give an explicit description of $H_1 \\cap H_2$ by a formula that shows how to generate all points.\n",
-    "\n",
-    "\\section*{SOLUTION TO PRACTICE PROBLEM}\n",
-    "\n",
-    "First, compute $\\mathbf{n}_1 \\cdot \\mathbf{p}_1 = -3$ and $\\mathbf{n}_2 \\cdot \\mathbf{p}_2 = 7$. The hyperplane $H_1$ is the solution set of the equation $x_1 + x_2 - 2x_3 = -3$, and $H_2$ is the solution set of the equation $-2x_1 + x_2 + 3x_3 = 7$. Then\n",
-    "\n",
-    "\\[H_1 \\cap H_2 = \\{\\mathbf{x} : x_1 + x_2 - 2x_3 = -3 \\text{ and } -2x_1 + x_2 + 3x_3 = 7\\}\\]\n",
-    "\n",
-    "This is an implicit description of $H_1 \\cap H_2$. To find an explicit description, solve the system of equations by row reduction:\n",
-    "\n",
-    "\\[\\begin{bmatrix}\n",
-    "1 & 1 & -2 & -3 \\\\\n",
-    "-2 & 1 & 3 & 7\n",
-    "\\end{bmatrix} \\sim\n",
-    "\\begin{bmatrix}\n",
-    "1 & 0 & -\\frac{5}{3} & -\\frac{10}{3} \\\\\n",
-    "0 & 1 & -\\frac{1}{3} & \\frac{1}{3}\n",
-    "\\end{bmatrix}\\]\n",
-    "\n",
-    "Thus $x_1 = -\\frac{10}{3} + \\frac{5}{3}x_3$, $x_2 = \\frac{1}{3} + \\frac{1}{3}x_3$, $x_3 = x_3$. Let \n",
-    "$\\mathbf{p} = \\begin{bmatrix} -\\frac{10}{3} \\\\ \\frac{1}{3} \\\\ 0 \\end{bmatrix}$ and \n",
-    "$\\mathbf{v} = \\begin{bmatrix} \\frac{5}{3} \\\\ \\frac{1}{3} \\\\ 1 \\end{bmatrix}$. The general solution can be written as $\\mathbf{x} = \\mathbf{p} + x_3\\mathbf{v}$. Thus $H_1 \\cap H_2$ is the line through $\\mathbf{p}$ in the direction of $\\mathbf{v}$. Note that $\\mathbf{v}$ is orthogonal to both $\\mathbf{n}_1$ and $\\mathbf{n}_2$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/09_Ch_10_SVD_Apps/111-Apps.ipynb)"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/09_Ch_10_SVD_Apps/111-SVD.ipynb)"
    ]
   }
  ],
