finished dumping lec 21 and practice problems LAA 7.4

--- a/11_Ch_12_Optimization/132-Gradient_Descent.ipynb
+++ b/11_Ch_12_Optimization/132-Gradient_Descent.ipynb
@@ -109,6 +109,173 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$s_k = \\argmin_{s \\in [0,1]} F(x^{(k)} - sf(x^{(k)}))$\n",
+    "\n",
+    "and the update $x^{(k+1)} = x^{(k)} - s_k f(x^{(k)})$.\n",
+    "\n",
+    "This is called exact line search for selecting the step size, and is widely used in practice.\n",
+    "If we use this choice of step size $s_k$, then it is possible to write an explicit formula\n",
+    "for our iterates $(x^k, y^k)$ as we progress down the bowl. Starting at $(x^{(0)},y^{(0)})=(b,1)$, we\n",
+    "get\n",
+    "\\begin{equation}\n",
+    "x^{(k)} = b \\left(\\frac{b-1}{b+1}\\right)^k, \\quad y^{(k)} = \\left(\\frac{1-b}{1+b}\\right)^k, \\quad F(x^{(k)},y^{(k)}) = \\left(\\frac{1-b}{1+b}\\right)^{2k} F(x^{(0)},y^{(0)}). \\quad (8)\n",
+    "\\end{equation}\n",
+    "\n",
+    "If $b=1$, which corresponds to a function with level sets that are perfect circles,\n",
+    "we succeed immediately in one step $(x^{(1)} = y^{(1)} = 0)$. This is because the gradient\n",
+    "always points directly to the optimal point $(0,0)$.\n",
+    "\n",
+    "\\begin{tikzpicture}\n",
+    "\\draw (0,0) circle (1cm);\n",
+    "\\node at (0,0) {$\\bullet$};\n",
+    "\\foreach \\angle in {0,45,...,315}\n",
+    "    \\draw[-latex] (0,0) -- (\\angle:1cm);\n",
+    "\\node at (1.5,0) {$b=1$ case};\n",
+    "\\node[right] at (1,0) {$\\rightarrow$ $\\nabla F(x,y)$ always points to the optimal};\n",
+    "\\node[right] at (1,-0.5) {point $x^* = (0,0)$};\n",
+    "\\end{tikzpicture}\n",
+    "\n",
+    "The real purpose of this example is seen when $b$ is small. The crucial ratio in\n",
+    "equation (8) is\n",
+    "\\[\n",
+    "r = \\frac{b-1}{b+1},\n",
+    "\\]\n",
+    "\n",
+    "If $r$ is small, $(x^{(k)},y^{(k)})$ converges to $(0,0)$ very quickly. However, if $r$ is close to\n",
+    "1, then this convergence is very slow. For example, if $b = \\frac{1}{10}$, then $r = \\frac{9}{11}$, for $b = \\frac{1}{100}$, $r = \\frac{99}{101}$.\n",
+    "\n",
+    "This means we need to take many more gradient steps to get close to $x^* = (0,0)$. The\n",
+    "picture below highlights what's going wrong: for small $b$, the level sets become elongated\n",
+    "ellipses, so that following gradients leads to us zig-zagging our way to the origin instead of\n",
+    "taking a straight path. It is this zig-zagging that causes slow convergence.\n",
+    "\n",
+    "\\begin{tikzpicture}\n",
+    "\\draw[->] (-10,0) -- (10,0) node[right] {$x_1$};\n",
+    "\\draw[->] (0,-4) -- (0,4) node[above] {$x_2$};\n",
+    "\\draw[dashed] (0,0) ellipse (8cm and 3cm);\n",
+    "\\draw[dashed] (0,0) ellipse (6cm and 2.25cm);\n",
+    "\\draw[dashed] (0,0) ellipse (4cm and 1.5cm);\n",
+    "\\draw[dashed] (0,0) ellipse (2cm and 0.75cm);\n",
+    "\\draw[red,-latex,thick] (8,0) -- (7.5,1) node[above] {$x^{(1)}$};\n",
+    "\\draw[red,-latex,thick] (7.5,1) -- (6,0.5);\n",
+    "\\draw[red,-latex,thick] (6,0.5) -- (5.5,1);\n",
+    "\\draw[red,-latex,thick] (5.5,1) -- (4,0.5);\n",
+    "\\draw[red,-latex,thick] (4,0.5) -- (3.5,0.75);\n",
+    "\\node[below right] at (8,0) {$x^{(0)}$};\n",
+    "\\end{tikzpicture}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "So what's going wrong here? If we write $F(x)$ as a quadratic form, it is:\n",
+    "\n",
+    "\\[\n",
+    "F(x) = \\begin{bmatrix} x^T & 1 \\end{bmatrix} \\begin{bmatrix} 0 & 0 \\\\ 0 & b \\end{bmatrix} \\begin{bmatrix} x \\\\ 1 \\end{bmatrix} = x^T b x\n",
+    "\\]\n",
+    "\n",
+    "Notice that the condition number of the matrix $K$ is precisely $\\frac{1}{b}$, which is large for\n",
+    "small $b$. This means that one direction (in this case the x-axis) is penalized much more\n",
+    "than the other (the y-axis). This leads to stretched out level sets, which leads to\n",
+    "zig-zags and slow convergence. How can we fix this?\n",
+    "\n",
+    "Newton's Method (continued)\n",
+    "\n",
+    "To derive the gradient descent method (GD), we used a first order approximation of\n",
+    "$F(x)$ near $x^{(k)}$ to figure out what direction we should move in. What if in this example\n",
+    "we saw steeper and shallower directions where the function changes quickly (look at the contours of the\n",
+    "function in the figure; they are all very thin ellipses)? Isn't one step enough?\n",
+    "\n",
+    "We should also account for how quickly the gradient changes: we need to compute the\n",
+    "\"gradient of the gradient\", a.k.a. the Hessian of $F$ at $x$. The Hessian of a function $f: \\mathbb{R}^n \\to \\mathbb{R}$\n",
+    "is an $n \\times n$ symmetric matrix with entries given by 2nd order partial derivatives of $f$:\n",
+    "\n",
+    "\\[\n",
+    "[\\nabla^2 f(x)]_{ij} = \\frac{\\partial^2 f}{\\partial x_i \\partial x_j}(x)\n",
+    "\\]\n",
+    "\n",
+    "The Hessian tells us how quickly the gradient changes in the same way $f'(x)$ tells us\n",
+    "how quickly $f(x)$ changes for a scalar function $f(x)$. The Hessian lets us make\n",
+    "a second order Taylor series approximation to our function $F(x)$ near our current\n",
+    "guess $x^{(k)}$:\n",
+    "\n",
+    "\\[\n",
+    "F(x) \\approx F(x^{(k)}) + \\nabla f(x^{(k)})^T(x-x^{(k)}) + (x-x^{(k)})^T \\nabla^2 f(x^{(k)})(x-x^{(k)}), \\quad (6)\n",
+    "\\]\n",
+    "\n",
+    "which provides a local quadratic approximation to $F(x)$ near $F(x^{(k)})$:\n",
+    "\n",
+    "\\begin{tikzpicture}\n",
+    "\\draw[->] (-2,0) -- (2,0) node[right] {$x$};\n",
+    "\\draw[->] (0,-0.5) -- (0,2) node[above] {$F(x)$};\n",
+    "\\draw[thick, blue] plot[domain=-2:2,samples=100] (\\x,{0.5*\\x*\\x});\n",
+    "\\draw[thick, red] plot[domain=-1:1,samples=100] (\\x,{0.5+0.5*\\x*\\x});\n",
+    "\\node[blue] at (1.5,1.5) {$F(x)$};\n",
+    "\\node[red] at (-1.5,1.5) {quad approx};\n",
+    "\\fill[blue] (0,0.5) circle (2pt);\n",
+    "\\node[right] at (0,0.5) {$F(x^{(k)})$};\n",
+    "\\end{tikzpicture}\n",
+    "\n",
+    "As before, if we let $\\Delta x^{(k)} = x^{(k+1)} - x^{(k)}$, we can rewrite (6) as\n",
+    "\n",
+    "\\[\n",
+    "F(x^{(k+1)}) - F(x^{(k)}) \\approx (\\Delta x^{(k)})^T \\nabla F(x^{(k)}) + \\frac{1}{2} \\nabla F(x^{(k)})^T \\Delta x^{(k)}. \\quad (7a)\n",
+    "\\]\n",
+    "\n",
+    "Since we want to make $F(x^{(k+1)}) - F(x^{(k)})$ as small as possible, it makes sense\n",
+    "to pick $\\Delta x^{(k)}$ to minimize the RHS of (7a), which is another minimization problem!\n",
+    "\n",
+    "We'll focus on the setting where $\\nabla^2 F(x^{(k)})$ is positive definite - this corresponds to\n",
+    "settings where our function is convex. In this case, the RHS of (7a) is a positive definite\n",
+    "quadratic function, which is minimized at:\n",
+    "\n",
+    "\\[\n",
+    "\\Delta x^{(k)} = - \\nabla^2 F(x^{(k)})^{-1} \\nabla F(x^{(k)}).\n",
+    "\\]\n",
+    "\n",
+    "Using this descent direction instead of $-\\nabla F(x^{(k)})$ yields Newton's Method:\n",
+    "\n",
+    "\\[\n",
+    "x^{(k+1)} = x^{(k)} - \\nabla^2 F(x^{(k)})^{-1} \\nabla F(x^{(k)}).\n",
+    "\\]\n",
+    "\n",
+    "The idea behind Newton's Method is to \"unstretch\" the stretched out directions,\n",
+    "so that to our algorithm, the level sets of a function are locally circles. If\n",
+    "we look at our test example above, note that:\n",
+    "\n",
+    "\\[\n",
+    "\\nabla^2 F(x) = \\begin{bmatrix} 1 & \\\\ & b \\end{bmatrix} \\Rightarrow \\nabla^2 F(x)^{-1} = \\begin{bmatrix} 1 & \\\\ & \\frac{1}{b} \\end{bmatrix}\n",
+    "\\]\n",
+    "\n",
+    "so that for $x^{(0)} = (b,1)$, we have:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "x^{(1)} &= x^{(0)} - \\nabla^2 F(x)^{-1} \\nabla F(x) \\\\\n",
+    "&= \\begin{bmatrix} b \\\\ 1 \\end{bmatrix} - \\begin{bmatrix} 1 & \\\\ & \\frac{1}{b} \\end{bmatrix} \\begin{bmatrix} b \\\\ b \\end{bmatrix} = \\begin{bmatrix} 0 \\\\ 0 \\end{bmatrix}\n",
+    "\\end{align*}\n",
+    "\n",
+    "i.e., we converge in one step no matter what the choice of $b$ is in $F(x) = \\frac{1}{2}(x^2+by^2)$!\n",
+    "\n",
+    "The cost of this fast convergence though is that at each update, we need to solve\n",
+    "a linear system of equations of the form\n",
+    "\n",
+    "\\[\n",
+    "\\nabla^2 F(x^{(k)}) \\Delta x^{(k)} = \\nabla F(x^{(k)})\n",
+    "\\]\n",
+    "\n",
+    "which may be expensive if $x$ is a high-dimensional vector. It is for this reason that\n",
+    "gradient descent based methods are the predominant methods used in machine learning,\n",
+    "where oftentimes the dimensionality of $x$ can be on the order of millions or\n",
+    "billions."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
