--- a/08_Ch_9_Symmetric_Matrices/105-Graph-consensus.ipynb
+++ b/08_Ch_9_Symmetric_Matrices/105-Graph-consensus.ipynb
@@ -184,7 +184,11 @@
     "\n",
     ":::\n",
     "\n",
-    "Unfortunately proving [this result](#connected-components-prop) would take us too far astray. Instead, we highlight the intuitive nature of the result in terms of the consensus system [(AVG)](#avg). This proposition tells us that if the communication graph $G$ is strongly connected, i.e., if everyone's information eventually reaches everyone, then $\\vv x(t) \\to \\vv x^* = \\text{avg}(\\vv x(0))\\mathbf{1}$ at a rate governed by the slowest decaying node $e^{-\\lambda_2 t}$."
+    "Unfortunately proving [this result](#connected-components-prop) would take us too far astray. Instead, we highlight the intuitive nature of the result in terms of the consensus system [(AVG)](#avg). This proposition tells us that if the communication graph $G$ is strongly connected, i.e., if everyone's information eventually reaches everyone, then $\\vv x(t) \\to \\vv x^* = \\text{avg}(\\vv x(0))\\mathbf{1}$ at a rate governed by the slowest decaying node $e^{-\\lambda_2 t}$.\n",
+    "\n",
+    ":::{note} Algebraic Connectivity\n",
+    "The eigenvalue $\\lambda_2$ that dictates the convergence rate of consensus, is called the _algebraic connectivity_ of the graph. \n",
+    ":::"
    ]
   },
   {
